// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Project|List List (admin) 1`] = `
.c0 {
  font-weight: normal;
  width: calc(100% - 50px);
}

.c3 {
  overflow: auto;
  max-height: calc(100vh - 70px);
  padding: 40px 0;
  -webkit-overflow-scrolling: touch;
}

.c4 {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6 {
  line-height: 1.5;
  margin: 2px 0;
  cursor: pointer;
  font-size: 24px;
  border-bottom: 2.4px solid #2F2F36;
  padding: 8px 0 13px;
}

.c6 a,
.c6 div {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: rgba(255,255,255,0.75);
  display: block;
}

.c5 {
  line-height: 1.5;
  margin: 2px 0;
  cursor: pointer;
  font-size: 24px;
  border-bottom: 2.4px solid #FFF;
  padding: 8px 0 13px;
}

.c5 a,
.c5 div {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #FFF;
  display: block;
}

.c7 {
  margin: 10px 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c8 {
  color: #FFF;
  font-size: 14px;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 12px 0;
}

.c1 {
  word-break: break-word;
}

.c2 {
  word-break: break-word;
}

.c20 {
  height: 155px;
}

.c22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c21 {
  bottom: 0;
  width: 100%;
  padding: 40px 0 36px;
  position: fixed;
  width: calc(100% - 40px);
  z-index: 9999;
  background-image: linear-gradient( to top, #000,#000 30%, rgba(0,0,0,0) );
}

.c9 {
  display: none;
}

.c10 {
  margin-right: 20px;
  overflow: hidden;
}

.c11 {
  color: #FFF;
}

.c12 {
  color: #FFF;
}

.c16 {
  list-style: none;
  margin: 0;
  padding: 0;
  overflow: hidden;
}

.c17 {
  display: inline-block;
  line-height: 1.25;
  margin-right: 1.5em;
  color: #71737e;
}

.c17::before {
  content: '•';
  margin-left: -1.5em;
  display: inline-block;
  padding: 0 7px;
}

.c18 {
  margin: 7px 0 14px;
  cursor: pointer;
  white-space: pre-wrap;
  word-break: break-word;
}

.c19 {
  color: #FFF;
  font-size: 12px;
  font-weight: 300;
  white-space: nowrap;
  display: block;
  width: 100%;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c15 {
  margin-bottom: 20px;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 100%;
  min-height: 150px;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

@media (min-width:1050px) {
  .c0 {
    display: none;
  }
}

@media (min-width:1050px) {
  .c3 {
    padding-bottom: 20px;
    max-height: calc(100vh - 154px);
  }
}

@media (min-width:1050px) {
  .c22 {
    display: none;
  }
}

@media (min-width:1050px) {
  .c21 {
    position: fixed;
    width: calc(100% - 40px);
    z-index: 9999;
    background-image: linear-gradient( to top, #000,#000 30%, rgba(0,0,0,0) );
    width: 1000px;
  }
}

@media (min-width:1050px) {
  .c13 {
    display: block;
  }
}

@media (min-width:1050px) {
  .c9 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin: 60px 0 40px 0;
    min-height: 63px;
  }
}

@media (min-width:1050px) {
  .c15 {
    width: calc(100%/3 - 20px);
    max-width: 320px;
    min-height: 192px;
    margin: 10px;
  }
}

@media (min-width:1050px) {
  .c14 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
    margin: 0 -10px;
  }
}

<div
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <style>
    
  body {
    color: #FFF;
    background-color: #000;
  }

  </style>
  <div
    className=""
  >
    <div
      className="c0"
    >
      <div
        style={
          Object {
            "alignItems": "flex-start",
            "color": "#FFF",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingBottom": "18px",
            "width": "100%",
          }
        }
      >
        <div>
          <div
            className=""
          >
            <h2
              className="c1"
              id="headerTitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 100,
                  "margin": 0,
                }
              }
            >
              Projects
            </h2>
            <h1
              className="c2"
              id="headerSubtitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 600,
                  "letterSpacing": "-0.12px",
                  "lineHight": 1.25,
                  "margin": 0,
                }
              }
            >
              Overview
            </h1>
          </div>
        </div>
        <button
          disabled={false}
          id="topHeaderOpenMenuBtn"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "position": "absolute",
              "right": 0,
              "top": 6,
              "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
            }
          }
          type="button"
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 10 60"
          >
            <path
              d="M5 37a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
      <div
        style={
          Object {
            "backgroundColor": "#000",
            "color": "#FFF",
            "maxWidth": null,
            "minHeight": "100vh",
            "padding": "18px 20px 27px",
            "position": "absolute",
            "right": 0,
            "textAlign": "left",
            "top": 0,
            "transform": "translateX(100%)",
            "transition": "transform 400ms cubic-bezier(0.86, 0, 0.07, 1), visibility 0s linear 400ms",
            "visibility": 0,
            "width": "100%",
            "zIndex": 9999,
          }
        }
      >
        <div
          className=""
        >
          <div
            className=""
          >
            <h2
              className="c1"
              id="headerTitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 100,
                  "margin": 0,
                }
              }
            >
              Projects
            </h2>
            <h1
              className="c2"
              id="headerSubtitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 600,
                  "letterSpacing": "-0.12px",
                  "lineHight": 1.25,
                  "margin": 0,
                }
              }
            >
              Overview
            </h1>
          </div>
        </div>
        <div
          className="c3"
        >
          <div
            className="c4"
          >
            <div
              className="c5"
            >
              <a
                href="/project/"
                id="projectsNavBtn"
                onClick={[Function]}
              >
                Projects
              </a>
            </div>
            <div
              className="c6"
            >
              <a
                href="/user/"
                id="usersPageNavBtn"
                onClick={[Function]}
              >
                Users
              </a>
            </div>
          </div>
          <div
            className="c4"
          >
            <div
              className="c6"
            >
              <a
                href="/settings"
                id="settingsNavBtn"
                onClick={[Function]}
              >
                Settings
              </a>
            </div>
            <div
              className="c6"
            >
              <div
                onClick={[Function]}
              >
                Log out
              </div>
            </div>
          </div>
          <div
            className="c7"
          >
            <a
              className="c8"
              href="/"
              id="aboutNavBtn"
              onClick={[Function]}
            >
              About Schema CMS
            </a>
            <a
              className="c8"
              href="/"
              id="apiNavBtn"
              onClick={[Function]}
            >
              API Doc
            </a>
            <a
              className="c8"
              href="/"
              id="repositoryNavBtn"
              onClick={[Function]}
            >
              GitHub Repository
            </a>
          </div>
        </div>
        <button
          disabled={false}
          id="topHeaderCloseMenuButton"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "position": "absolute",
              "right": 0,
              "top": "6px",
              "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
            }
          }
          type="button"
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M39.192 17.98l2.829 2.828L32.828 30l9.193 9.192-2.829 2.829L30 32.828l-9.192 9.193-2.829-2.829L27.172 30l-9.193-9.192 2.829-2.829L30 27.172l9.192-9.193z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      className="c9"
    >
      <div
        className="c10"
      >
        <h2
          className="c11"
          id="desktopHeaderTitle"
          style={
            Object {
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "24px",
              "fontWeight": 100,
              "margin": 0,
            }
          }
        >
          Projects
        </h2>
        <h1
          className="c12"
          id="desktopHeaderSubtitle"
          style={
            Object {
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "24px",
              "fontWeight": 600,
              "letterSpacing": "-0.12px",
              "lineHight": 1.25,
              "margin": 0,
            }
          }
        >
          Overview
        </h1>
      </div>
      <div
        className=""
      >
        <div
          className="c13"
        >
          <button
            disabled={false}
            id="addProjectDesktopBtn"
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "#FFF",
                "border": "none",
                "borderRadius": "48px",
                "color": "#000",
                "cursor": "pointer",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": "18px",
                "height": "60px",
                "margin": "0",
                "minHeight": "48px",
                "outline": "none",
                "padding": "0",
                "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
                "width": "60px",
              }
            }
          >
            <svg
              style={
                Object {
                  "fill": "#000",
                  "height": "60px",
                  "shapeRendering": "crispEdges",
                  "width": "60px",
                }
              }
              viewBox="0 0 60 60"
            >
              <path
                d="M32 15v13h13v4H32v13h-4V32H15v-4h13V15h4z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <section
      className="c14"
    >
      <div
        className="c15"
        style={
          Object {
            "backgroundColor": "#1d1d20",
            "borderTop": "2px solid #FFF",
            "color": "#FFF",
            "display": "flex",
            "flexDirection": "column",
            "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "12px",
            "justifyContent": "space-between",
            "padding": "12px 14px 14px",
            "position": "relative",
          }
        }
      >
        <div
          style={
            Object {
              "height": "100%",
              "width": "100%",
            }
          }
        >
          <div
            style={
              Object {
                "color": "#71737e",
                "marginBottom": 14,
              }
            }
          >
            <ul
              className="c16"
            >
              <li
                className="c17"
                id="headerItem-0"
              >
                3 months ago
              </li>
              <li
                className="c17"
                id="headerItem-1"
              >
                In Progress
              </li>
              <li
                className="c17"
                id="headerItem-2"
              >
                Sed sed risus a nibh Maecenas nec pulvinar ex
              </li>
            </ul>
          </div>
          <h1
            id="projectName-0"
            onClick={[Function]}
            style={
              Object {
                "cursor": "pointer",
                "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSize": "24px",
                "fontWeight": 600,
                "letterSpacing": "-0.12px",
                "lineHight": 1.25,
                "margin": 0,
                "wordBreak": "break-word",
              }
            }
          >
            Project Name
          </h1>
          <div
            className="c18"
            onClick={[Function]}
          >
            <p
              id="projectDescription-0"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "18px",
                  "fontWeight": 200,
                  "lineHeight": "1.33em",
                  "margin": 0,
                }
              }
            >
              Description
            </p>
          </div>
        </div>
        <div
          style={
            Object {
              "color": "#71737e",
              "marginBottom": 4,
              "marginTop": 10,
            }
          }
        >
          <div
            className="c19"
            id="apiPath-0"
          >
            schemacms/api/project_title
          </div>
        </div>
      </div>
      <div
        className="c15"
        style={
          Object {
            "backgroundColor": "#1d1d20",
            "borderTop": "2px solid #FFF",
            "color": "#FFF",
            "display": "flex",
            "flexDirection": "column",
            "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "12px",
            "justifyContent": "space-between",
            "padding": "12px 14px 14px",
            "position": "relative",
          }
        }
      >
        <div
          style={
            Object {
              "height": "100%",
              "width": "100%",
            }
          }
        >
          <div
            style={
              Object {
                "color": "#71737e",
                "marginBottom": 14,
              }
            }
          >
            <ul
              className="c16"
            >
              <li
                className="c17"
                id="headerItem-0"
              >
                3 months ago
              </li>
              <li
                className="c17"
                id="headerItem-1"
              >
                Published
              </li>
              <li
                className="c17"
                id="headerItem-2"
              >
                Tadeusz Kosciuszko
              </li>
            </ul>
          </div>
          <h1
            id="projectName-1"
            onClick={[Function]}
            style={
              Object {
                "cursor": "pointer",
                "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSize": "24px",
                "fontWeight": 600,
                "letterSpacing": "-0.12px",
                "lineHight": 1.25,
                "margin": 0,
                "wordBreak": "break-word",
              }
            }
          >
            Honec sodales libero non fermentum aliquam
          </h1>
          <div
            className="c18"
            onClick={[Function]}
          >
            <p
              id="projectDescription-1"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "18px",
                  "fontWeight": 200,
                  "lineHeight": "1.33em",
                  "margin": 0,
                }
              }
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed molestie fermentum dictum. In id posuere nibh.
            </p>
          </div>
        </div>
        <div
          style={
            Object {
              "color": "#71737e",
              "marginBottom": 4,
              "marginTop": 10,
            }
          }
        >
          <div
            className="c19"
            id="apiPath-1"
          >
            schemacms/api/wuwhonec-sodales-libero-non-fermentum-aliquam-honec-sodales-libero-non-fermentum-aliquam
          </div>
        </div>
      </div>
    </section>
    <div
      className="c20"
    >
      <div
        className="c21"
      >
        <div
          className="c22"
        >
          <div
            className="c13"
          >
            <button
              disabled={false}
              id="addProjectBtn"
              onClick={[Function]}
              style={
                Object {
                  "backgroundColor": "#FFF",
                  "border": "none",
                  "borderRadius": "48px",
                  "color": "#000",
                  "cursor": "pointer",
                  "display": "inline-block",
                  "fill": "#FFF",
                  "fontSize": "18px",
                  "height": "60px",
                  "margin": "0",
                  "minHeight": "48px",
                  "outline": "none",
                  "padding": "0",
                  "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
                  "width": "60px",
                }
              }
            >
              <svg
                style={
                  Object {
                    "fill": "#000",
                    "height": "60px",
                    "shapeRendering": "crispEdges",
                    "width": "60px",
                  }
                }
                viewBox="0 0 60 60"
              >
                <path
                  d="M32 15v13h13v4H32v13h-4V32H15v-4h13V15h4z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Project|List List (editor) 1`] = `
.c0 {
  font-weight: normal;
  width: calc(100% - 50px);
}

.c3 {
  overflow: auto;
  max-height: calc(100vh - 70px);
  padding: 40px 0;
  -webkit-overflow-scrolling: touch;
}

.c4 {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6 {
  line-height: 1.5;
  margin: 2px 0;
  cursor: pointer;
  font-size: 24px;
  border-bottom: 2.4px solid #f0efef;
  padding: 8px 0 13px;
}

.c6 a,
.c6 div {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: rgba(255,255,255,0.75);
  display: block;
}

.c5 {
  line-height: 1.5;
  margin: 2px 0;
  cursor: pointer;
  font-size: 24px;
  border-bottom: 2.4px solid #1d1d20;
  padding: 8px 0 13px;
}

.c5 a,
.c5 div {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #1d1d20;
  display: block;
}

.c7 {
  margin: 10px 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c8 {
  color: #1d1d20;
  font-size: 14px;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 12px 0;
}

.c1 {
  word-break: break-word;
}

.c2 {
  word-break: break-word;
}

.c19 {
  height: 155px;
}

.c21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c20 {
  bottom: 0;
  width: 100%;
  padding: 40px 0 36px;
  position: fixed;
  width: calc(100% - 40px);
  z-index: 9999;
  background-image: linear-gradient( to top, #FFF,#FFF 30%, rgba(255,255,255,0) );
}

.c9 {
  display: none;
}

.c10 {
  margin-right: 20px;
  overflow: hidden;
}

.c11 {
  color: #1d1d20;
}

.c12 {
  color: #1d1d20;
}

.c15 {
  list-style: none;
  margin: 0;
  padding: 0;
  overflow: hidden;
}

.c16 {
  display: inline-block;
  line-height: 1.25;
  margin-right: 1.5em;
  color: #a6a7aa;
}

.c16::before {
  content: '•';
  margin-left: -1.5em;
  display: inline-block;
  padding: 0 7px;
}

.c17 {
  margin: 7px 0 14px;
  cursor: pointer;
  white-space: pre-wrap;
  word-break: break-word;
}

.c18 {
  color: #000;
  font-size: 12px;
  font-weight: 300;
  white-space: nowrap;
  display: block;
  width: 100%;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c14 {
  margin-bottom: 20px;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 100%;
  min-height: 150px;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

@media (min-width:1050px) {
  .c0 {
    display: none;
  }
}

@media (min-width:1050px) {
  .c3 {
    padding-bottom: 20px;
    max-height: calc(100vh - 154px);
  }
}

@media (min-width:1050px) {
  .c21 {
    display: none;
  }
}

@media (min-width:1050px) {
  .c20 {
    position: fixed;
    width: calc(100% - 40px);
    z-index: 9999;
    background-image: linear-gradient( to top, #FFF,#FFF 30%, rgba(255,255,255,0) );
    width: 1000px;
  }
}

@media (min-width:1050px) {
  .c9 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin: 60px 0 40px 0;
    min-height: 63px;
  }
}

@media (min-width:1050px) {
  .c14 {
    width: calc(100%/3 - 20px);
    max-width: 320px;
    min-height: 192px;
    margin: 10px;
  }
}

@media (min-width:1050px) {
  .c13 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
    margin: 0 -10px;
  }
}

<div
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <style>
    
  body {
    color: #1d1d20;
    background-color: #FFF;
  }

  </style>
  <div
    className=""
  >
    <div
      className="c0"
    >
      <div
        style={
          Object {
            "alignItems": "flex-start",
            "color": "#1d1d20",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingBottom": "18px",
            "width": "100%",
          }
        }
      >
        <div>
          <div
            className=""
          >
            <h2
              className="c1"
              id="headerTitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 100,
                  "margin": 0,
                }
              }
            >
              Projects
            </h2>
            <h1
              className="c2"
              id="headerSubtitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 600,
                  "letterSpacing": "-0.12px",
                  "lineHight": 1.25,
                  "margin": 0,
                }
              }
            >
              Overview
            </h1>
          </div>
        </div>
        <button
          disabled={false}
          id="topHeaderOpenMenuBtn"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "border": "none",
              "borderRadius": "48px",
              "color": "#000",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#1d1d20",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "position": "absolute",
              "right": 0,
              "top": 6,
              "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
            }
          }
          type="button"
        >
          <svg
            style={
              Object {
                "fill": "#1d1d20",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 10 60"
          >
            <path
              d="M5 37a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
      <div
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "maxWidth": null,
            "minHeight": "100vh",
            "padding": "18px 20px 27px",
            "position": "absolute",
            "right": 0,
            "textAlign": "left",
            "top": 0,
            "transform": "translateX(100%)",
            "transition": "transform 400ms cubic-bezier(0.86, 0, 0.07, 1), visibility 0s linear 400ms",
            "visibility": 0,
            "width": "100%",
            "zIndex": 9999,
          }
        }
      >
        <div
          className=""
        >
          <div
            className=""
          >
            <h2
              className="c1"
              id="headerTitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 100,
                  "margin": 0,
                }
              }
            >
              Projects
            </h2>
            <h1
              className="c2"
              id="headerSubtitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 600,
                  "letterSpacing": "-0.12px",
                  "lineHight": 1.25,
                  "margin": 0,
                }
              }
            >
              Overview
            </h1>
          </div>
        </div>
        <div
          className="c3"
        >
          <div
            className="c4"
          >
            <div
              className="c5"
            >
              <a
                href="/project/"
                id="projectsNavBtn"
                onClick={[Function]}
              >
                Projects
              </a>
            </div>
            <div
              className="c6"
            >
              <a
                href="/user/"
                id="usersPageNavBtn"
                onClick={[Function]}
              >
                Users
              </a>
            </div>
          </div>
          <div
            className="c4"
          >
            <div
              className="c6"
            >
              <a
                href="/settings"
                id="settingsNavBtn"
                onClick={[Function]}
              >
                Settings
              </a>
            </div>
            <div
              className="c6"
            >
              <div
                onClick={[Function]}
              >
                Log out
              </div>
            </div>
          </div>
          <div
            className="c7"
          >
            <a
              className="c8"
              href="/"
              id="aboutNavBtn"
              onClick={[Function]}
            >
              About Schema CMS
            </a>
            <a
              className="c8"
              href="/"
              id="apiNavBtn"
              onClick={[Function]}
            >
              API Doc
            </a>
            <a
              className="c8"
              href="/"
              id="repositoryNavBtn"
              onClick={[Function]}
            >
              GitHub Repository
            </a>
          </div>
        </div>
        <button
          disabled={false}
          id="topHeaderCloseMenuButton"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "border": "none",
              "borderRadius": "48px",
              "color": "#000",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#1d1d20",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "position": "absolute",
              "right": 0,
              "top": "6px",
              "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
            }
          }
          type="button"
        >
          <svg
            style={
              Object {
                "fill": "#1d1d20",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M39.192 17.98l2.829 2.828L32.828 30l9.193 9.192-2.829 2.829L30 32.828l-9.192 9.193-2.829-2.829L27.172 30l-9.193-9.192 2.829-2.829L30 27.172l9.192-9.193z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      className="c9"
    >
      <div
        className="c10"
      >
        <h2
          className="c11"
          id="desktopHeaderTitle"
          style={
            Object {
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "24px",
              "fontWeight": 100,
              "margin": 0,
            }
          }
        >
          Projects
        </h2>
        <h1
          className="c12"
          id="desktopHeaderSubtitle"
          style={
            Object {
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "24px",
              "fontWeight": 600,
              "letterSpacing": "-0.12px",
              "lineHight": 1.25,
              "margin": 0,
            }
          }
        >
          Overview
        </h1>
      </div>
      <div
        className=""
      />
    </div>
    <section
      className="c13"
    >
      <div
        className="c14"
        style={
          Object {
            "backgroundColor": "#f0efef",
            "borderTop": "2px solid #000",
            "color": "#1d1d20",
            "display": "flex",
            "flexDirection": "column",
            "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "12px",
            "justifyContent": "space-between",
            "padding": "12px 14px 14px",
            "position": "relative",
          }
        }
      >
        <div
          style={
            Object {
              "height": "100%",
              "width": "100%",
            }
          }
        >
          <div
            style={
              Object {
                "color": "#a6a7aa",
                "marginBottom": 14,
              }
            }
          >
            <ul
              className="c15"
            >
              <li
                className="c16"
                id="headerItem-0"
              >
                3 months ago
              </li>
              <li
                className="c16"
                id="headerItem-1"
              >
                In Progress
              </li>
              <li
                className="c16"
                id="headerItem-2"
              >
                Sed sed risus a nibh Maecenas nec pulvinar ex
              </li>
            </ul>
          </div>
          <h1
            id="projectName-0"
            onClick={[Function]}
            style={
              Object {
                "cursor": "pointer",
                "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSize": "24px",
                "fontWeight": 600,
                "letterSpacing": "-0.12px",
                "lineHight": 1.25,
                "margin": 0,
                "wordBreak": "break-word",
              }
            }
          >
            Project Name
          </h1>
          <div
            className="c17"
            onClick={[Function]}
          >
            <p
              id="projectDescription-0"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "18px",
                  "fontWeight": 200,
                  "lineHeight": "1.33em",
                  "margin": 0,
                }
              }
            >
              Description
            </p>
          </div>
        </div>
        <div
          style={
            Object {
              "color": "#a6a7aa",
              "marginBottom": 4,
              "marginTop": 10,
            }
          }
        >
          <div
            className="c18"
            id="apiPath-0"
          >
            schemacms/api/project_title
          </div>
        </div>
      </div>
      <div
        className="c14"
        style={
          Object {
            "backgroundColor": "#f0efef",
            "borderTop": "2px solid #000",
            "color": "#1d1d20",
            "display": "flex",
            "flexDirection": "column",
            "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "12px",
            "justifyContent": "space-between",
            "padding": "12px 14px 14px",
            "position": "relative",
          }
        }
      >
        <div
          style={
            Object {
              "height": "100%",
              "width": "100%",
            }
          }
        >
          <div
            style={
              Object {
                "color": "#a6a7aa",
                "marginBottom": 14,
              }
            }
          >
            <ul
              className="c15"
            >
              <li
                className="c16"
                id="headerItem-0"
              >
                3 months ago
              </li>
              <li
                className="c16"
                id="headerItem-1"
              >
                Published
              </li>
              <li
                className="c16"
                id="headerItem-2"
              >
                Tadeusz Kosciuszko
              </li>
            </ul>
          </div>
          <h1
            id="projectName-1"
            onClick={[Function]}
            style={
              Object {
                "cursor": "pointer",
                "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSize": "24px",
                "fontWeight": 600,
                "letterSpacing": "-0.12px",
                "lineHight": 1.25,
                "margin": 0,
                "wordBreak": "break-word",
              }
            }
          >
            Honec sodales libero non fermentum aliquam
          </h1>
          <div
            className="c17"
            onClick={[Function]}
          >
            <p
              id="projectDescription-1"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "18px",
                  "fontWeight": 200,
                  "lineHeight": "1.33em",
                  "margin": 0,
                }
              }
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed molestie fermentum dictum. In id posuere nibh.
            </p>
          </div>
        </div>
        <div
          style={
            Object {
              "color": "#a6a7aa",
              "marginBottom": 4,
              "marginTop": 10,
            }
          }
        >
          <div
            className="c18"
            id="apiPath-1"
          >
            schemacms/api/wuwhonec-sodales-libero-non-fermentum-aliquam-honec-sodales-libero-non-fermentum-aliquam
          </div>
        </div>
      </div>
    </section>
    <div
      className="c19"
    >
      <div
        className="c20"
      >
        <div
          className="c21"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Project|List No data 1`] = `
.c0 {
  font-weight: normal;
  width: calc(100% - 50px);
}

.c3 {
  overflow: auto;
  max-height: calc(100vh - 70px);
  padding: 40px 0;
  -webkit-overflow-scrolling: touch;
}

.c4 {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6 {
  line-height: 1.5;
  margin: 2px 0;
  cursor: pointer;
  font-size: 24px;
  border-bottom: 2.4px solid #2F2F36;
  padding: 8px 0 13px;
}

.c6 a,
.c6 div {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: rgba(255,255,255,0.75);
  display: block;
}

.c5 {
  line-height: 1.5;
  margin: 2px 0;
  cursor: pointer;
  font-size: 24px;
  border-bottom: 2.4px solid #FFF;
  padding: 8px 0 13px;
}

.c5 a,
.c5 div {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #FFF;
  display: block;
}

.c7 {
  margin: 10px 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c8 {
  color: #FFF;
  font-size: 14px;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 12px 0;
}

.c1 {
  word-break: break-word;
}

.c2 {
  word-break: break-word;
}

.c15 {
  height: 155px;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c16 {
  bottom: 0;
  width: 100%;
  padding: 40px 0 36px;
  position: fixed;
  width: calc(100% - 40px);
  z-index: 9999;
  background-image: linear-gradient( to top, #000,#000 30%, rgba(0,0,0,0) );
}

.c9 {
  display: none;
}

.c10 {
  margin-right: 20px;
  overflow: hidden;
}

.c11 {
  color: #FFF;
}

.c12 {
  color: #FFF;
}

.c14 {
  color: #FFF;
  text-align: center;
  padding: 50px 10px;
  font-weight: 200;
  font-size: 20px;
}

@media (min-width:1050px) {
  .c0 {
    display: none;
  }
}

@media (min-width:1050px) {
  .c3 {
    padding-bottom: 20px;
    max-height: calc(100vh - 154px);
  }
}

@media (min-width:1050px) {
  .c17 {
    display: none;
  }
}

@media (min-width:1050px) {
  .c16 {
    position: fixed;
    width: calc(100% - 40px);
    z-index: 9999;
    background-image: linear-gradient( to top, #000,#000 30%, rgba(0,0,0,0) );
    width: 1000px;
  }
}

@media (min-width:1050px) {
  .c13 {
    display: block;
  }
}

@media (min-width:1050px) {
  .c9 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin: 60px 0 40px 0;
    min-height: 63px;
  }
}

<div
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <style>
    
  body {
    color: #FFF;
    background-color: #000;
  }

  </style>
  <div
    className=""
  >
    <div
      className="c0"
    >
      <div
        style={
          Object {
            "alignItems": "flex-start",
            "color": "#FFF",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingBottom": "18px",
            "width": "100%",
          }
        }
      >
        <div>
          <div
            className=""
          >
            <h2
              className="c1"
              id="headerTitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 100,
                  "margin": 0,
                }
              }
            >
              Projects
            </h2>
            <h1
              className="c2"
              id="headerSubtitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 600,
                  "letterSpacing": "-0.12px",
                  "lineHight": 1.25,
                  "margin": 0,
                }
              }
            >
              Overview
            </h1>
          </div>
        </div>
        <button
          disabled={false}
          id="topHeaderOpenMenuBtn"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "position": "absolute",
              "right": 0,
              "top": 6,
              "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
            }
          }
          type="button"
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 10 60"
          >
            <path
              d="M5 37a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
      <div
        style={
          Object {
            "backgroundColor": "#000",
            "color": "#FFF",
            "maxWidth": null,
            "minHeight": "100vh",
            "padding": "18px 20px 27px",
            "position": "absolute",
            "right": 0,
            "textAlign": "left",
            "top": 0,
            "transform": "translateX(100%)",
            "transition": "transform 400ms cubic-bezier(0.86, 0, 0.07, 1), visibility 0s linear 400ms",
            "visibility": 0,
            "width": "100%",
            "zIndex": 9999,
          }
        }
      >
        <div
          className=""
        >
          <div
            className=""
          >
            <h2
              className="c1"
              id="headerTitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 100,
                  "margin": 0,
                }
              }
            >
              Projects
            </h2>
            <h1
              className="c2"
              id="headerSubtitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 600,
                  "letterSpacing": "-0.12px",
                  "lineHight": 1.25,
                  "margin": 0,
                }
              }
            >
              Overview
            </h1>
          </div>
        </div>
        <div
          className="c3"
        >
          <div
            className="c4"
          >
            <div
              className="c5"
            >
              <a
                href="/project/"
                id="projectsNavBtn"
                onClick={[Function]}
              >
                Projects
              </a>
            </div>
            <div
              className="c6"
            >
              <a
                href="/user/"
                id="usersPageNavBtn"
                onClick={[Function]}
              >
                Users
              </a>
            </div>
          </div>
          <div
            className="c4"
          >
            <div
              className="c6"
            >
              <a
                href="/settings"
                id="settingsNavBtn"
                onClick={[Function]}
              >
                Settings
              </a>
            </div>
            <div
              className="c6"
            >
              <div
                onClick={[Function]}
              >
                Log out
              </div>
            </div>
          </div>
          <div
            className="c7"
          >
            <a
              className="c8"
              href="/"
              id="aboutNavBtn"
              onClick={[Function]}
            >
              About Schema CMS
            </a>
            <a
              className="c8"
              href="/"
              id="apiNavBtn"
              onClick={[Function]}
            >
              API Doc
            </a>
            <a
              className="c8"
              href="/"
              id="repositoryNavBtn"
              onClick={[Function]}
            >
              GitHub Repository
            </a>
          </div>
        </div>
        <button
          disabled={false}
          id="topHeaderCloseMenuButton"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "position": "absolute",
              "right": 0,
              "top": "6px",
              "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
            }
          }
          type="button"
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M39.192 17.98l2.829 2.828L32.828 30l9.193 9.192-2.829 2.829L30 32.828l-9.192 9.193-2.829-2.829L27.172 30l-9.193-9.192 2.829-2.829L30 27.172l9.192-9.193z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      className="c9"
    >
      <div
        className="c10"
      >
        <h2
          className="c11"
          id="desktopHeaderTitle"
          style={
            Object {
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "24px",
              "fontWeight": 100,
              "margin": 0,
            }
          }
        >
          Projects
        </h2>
        <h1
          className="c12"
          id="desktopHeaderSubtitle"
          style={
            Object {
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "24px",
              "fontWeight": 600,
              "letterSpacing": "-0.12px",
              "lineHight": 1.25,
              "margin": 0,
            }
          }
        >
          Overview
        </h1>
      </div>
      <div
        className=""
      >
        <div
          className="c13"
        >
          <button
            disabled={false}
            id="addProjectDesktopBtn"
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "#FFF",
                "border": "none",
                "borderRadius": "48px",
                "color": "#000",
                "cursor": "pointer",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": "18px",
                "height": "60px",
                "margin": "0",
                "minHeight": "48px",
                "outline": "none",
                "padding": "0",
                "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
                "width": "60px",
              }
            }
          >
            <svg
              style={
                Object {
                  "fill": "#000",
                  "height": "60px",
                  "shapeRendering": "crispEdges",
                  "width": "60px",
                }
              }
              viewBox="0 0 60 60"
            >
              <path
                d="M32 15v13h13v4H32v13h-4V32H15v-4h13V15h4z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      className="c14"
    >
      No Projects
    </div>
    <div
      className="c15"
    >
      <div
        className="c16"
      >
        <div
          className="c17"
        >
          <div
            className="c13"
          >
            <button
              disabled={false}
              id="addProjectBtn"
              onClick={[Function]}
              style={
                Object {
                  "backgroundColor": "#FFF",
                  "border": "none",
                  "borderRadius": "48px",
                  "color": "#000",
                  "cursor": "pointer",
                  "display": "inline-block",
                  "fill": "#FFF",
                  "fontSize": "18px",
                  "height": "60px",
                  "margin": "0",
                  "minHeight": "48px",
                  "outline": "none",
                  "padding": "0",
                  "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
                  "width": "60px",
                }
              }
            >
              <svg
                style={
                  Object {
                    "fill": "#000",
                    "height": "60px",
                    "shapeRendering": "crispEdges",
                    "width": "60px",
                  }
                }
                viewBox="0 0 60 60"
              >
                <path
                  d="M32 15v13h13v4H32v13h-4V32H15v-4h13V15h4z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
